<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/nbPeopleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/tipPercentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/nbPeopleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nbPeopleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:inputType="numberDecimal"
        android:width="90dp" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nbPeopleEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        android:width="100dp" />

    <TextView
        android:id="@+id/charPrctView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nbPeopleEditText"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/nbPeopleEditText"
        android:text="@string/percentSymbol"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>